force-app/main/default/objects/numm__currency__c/numm__currency__c.object-meta.xml
<CustomObject>
    <description>Objet des devises</description>
    <label>Devise</label>
    <nameField>
        <label>Devise</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>