force-app/main/default/objects/numm__currency__c/fields/numm__Currency__c.field-meta.xml
<CustomField>
    <fullName>numm__Currency__c</fullName>
    <description>Code ISO Devise</description>
    <externalId>true</externalId>
    <inlineHelpText>Saisir le code ISO de la devise</inlineHelpText>
    <label>Code Iso Devise</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>