force-app/main/default/objects/numm__currency__c/fields/numm__SubUnit__c.field-meta.xml
<CustomField>
    <fullName>numm__SubUnit__c</fullName>
    <inlineHelpText>La sous unité du dollar est le Cent</inlineHelpText>
    <label>Sous Unité</label>
    <length>30</length>
    <type>Text</type>
</CustomField>