force-app/main/default/objects/numm__currency__c/fields/numm__Symbole__c.field-meta.xml
<CustomField>
    <fullName>numm__Symbole__c</fullName>
    <label>Symbole</label>
    <length>1</length>
    <type>Text</type>
</CustomField>