force-app/main/default/objects/numm__currency__c/fields/numm__Unit__c.field-meta.xml
<CustomField>
    <fullName>numm__Unit__c</fullName>
    <inlineHelpText>Saisir l&#39;unité principale : Dollar pour le dollar US,</inlineHelpText>
    <label>Unité</label>
    <length>30</length>
    <type>Text</type>
</CustomField>